k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
