k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "false"
  name: hello-tijm-net
spec:
  rules:
  - host: hello.tijm.net
    http:
      paths:
      - backend:
          service:
            name: hello-world-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hello.tijm.net
    secretName: hello-tijm-net-tls-cert
